--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "form-data": "^4.0.0",
-    "node-cron": "^3.0.2"
+    "form-data": "^4.0.2",
+    "node-cron": "^3.0.2",
+    "qs": "^6.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
